<resources>
    <string name="app_name">BibbidiBobbidiFit</string>
    <string name="title_home">Quest</string>
    <string name="title_dashboard">Store</string>
    <string name="title_notifications">Profile</string>
    <string name="bibbidibobbidifit">BibbidiBobbidiFit</string>
    <string name="mulan_kick_silhouette">mulan kick silhouette</string>
    <string name="bluey_purple_and_black_background">bluey purple and black background</string>

    <!-- challenges/quests -->
    <string name="quest_accept">Accept</string>
    <string name="quest_decline">Decline</string>
    <string name="quest_title_prefix">New Quest! - </string>
    <string name="quest_title_trip_to_grandmas">Trip to Grandma\'s</string>
    <string name="quest_body_trip_to_grandmas">
        Little Red has stopped to gather flowers for her Grandma.\nAdventure 8 steps to help her pick the very best flowers for her Granny!
        \n\nCompletion Reward: 100 coins</string>
    <string name="current_quest_prefix">Current Quest: </string>
    <string name="next">next</string>
    <string name="light_red_background">light red background</string>
    <string name="little_red_riding_hood">little red riding hood</string>
    <string name="welcome_to_your_new_fitness_adventure">Welcome to your new fitness adventure!</string>
    <string name="light_green_background">light green background</string>
    <string name="enter_your_name">enter your name</string>
    <string name="first_off_let_s_get_to_know_you">First off, let\'s get to know you!</string>
    <string name="name">Name</string>
    <string name="country_optional">Country (optional)</string>
    <string name="age_optional">Age (optional)</string>
    <string name="country">country</string>
    <string name="age">age</string>
    <string name="name_2">name</string>
</resources>
